Removes unused imports and adds final declaration to injected fields.